tests/src/frontend/typechecking/invalid/variance_extend_field_3.sk
class Boxy<T>()
class Foo<+T>() {
  fun doit(): Boxy<T> {
    Boxy()
  }
}
